# simtrax

llvm_trax/: copyTraxFiles.bat  copyTraxFiles.sh  rebuild.sh  setup.sh  setup_cade.sh
llvm_trax/Trax/: CMakeLists.txt  IntrinsicsMips.td  IntrinsicsTrax.td  Makefile  MipsInstrFormats.td  MipsInstrInfo.td  MipsSchedule.td  MipsSubtarget.cpp  README  Trax.h  Trax.td  TraxAsmPrinter.cpp  TraxCallingConv.td  TraxDelaySlotFiller.cpp  TraxELFWriterInfo.cpp  TraxELFWriterInfo.h  TraxFrameLowering.cpp  TraxFrameLowering.h  TraxISelDAGToDAG.cpp  TraxISelLowering.cpp  TraxISelLowering.h  TraxInstrFPU.td  TraxInstrFSL.td  TraxInstrFormats.td  TraxInstrInfo.cpp  TraxInstrInfo.h  TraxInstrInfo.td  TraxIntrinsicInfo.cpp  TraxIntrinsicInfo.h  TraxIntrinsics.td  TraxMCAsmInfo.cpp  TraxMCAsmInfo.h  TraxMCCodeEmitter.cpp  TraxMCInstLower.cpp  TraxMCInstLower.h  TraxMachineFunction.h  TraxRegisterInfo.cpp  TraxRegisterInfo.h  TraxRegisterInfo.td  TraxRelocations.h  (+10 more)
llvm_trax/Trax/AsmParser/: CMakeLists.txt  Makefile  TraxAsmLexer.cpp  TraxAsmParser.cpp
llvm_trax/Trax/AsmPrinter/: CMakeLists.txt  Makefile  TraxAsmPrinter.cpp
llvm_trax/Trax/Disassembler/: CMakeLists.txt  Makefile  TraxDisassembler.cpp  TraxDisassembler.h
llvm_trax/Trax/InstPrinter/: CMakeLists.txt  Makefile  TraxInstPrinter.cpp  TraxInstPrinter.h
llvm_trax/Trax/TargetInfo/: CMakeLists.txt  Makefile  TraxTargetInfo.cpp
llvm_trax/include/: GlobalMemory.h  trax.hpp  trax_cpp.hpp  trax_trax.hpp  vec.hpp
llvm_trax/lib/: __extendsfdf2.s  memcpy.s  memset.bc  memset.s  trax_cpp.cpp  trax_trax.cpp
llvm_trax/linker/: clean.py  extractMipsNames.py  ln.py  mipsnames.txt
llvm_trax/misc/: Intrinsics.td  Release+Asserts_configure  Release_configure  Triple.cpp  Triple.h
samples/: CMakeLists.txt
samples/configs/: 65nm_config.txt  bigcache.config  config_readme.txt  dcacheparams.txt  default.config  icacheparams.txt  tiny.config
samples/configs/usimm_configs/: 1Gb_x16_amd2GHz.vi  gddr5.cfg  gddr5_2ch.cfg  gddr5_8ch.cfg
samples/raytracers/pathtracer/: BoundingVolumeHierarchy.h  PhongMaterial.h  RayCamera.h  Sphere.h  Texture.h  Triangle.h
samples/scenes/conference/: README  conference.light  conference.mtl  conference.obj.REMOVED.git-id  conference.view
samples/scenes/cornell/: CornellBox.mtl  cornell.light  cornell.view
samples/scenes/dragon/: README  dragon.light  dragon.obj.REMOVED.git-id  dragon.objl  dragon.view
samples/scenes/hairball/: README  hairball.light  hairball.obj.REMOVED.git-id  hairball.view
samples/scenes/sponza/: README  sponza.light  sponza.view
samples/scripts/: simple_run.bat  single_run.sh
samples/src/: CMakeLists.txt
samples/src/gradient/: CMakeLists.txt  Makefile  Makefile.vec  README.txt  gradient.cc
samples/src/helloworld/: CMakeLists.txt  Makefile  README.txt  helloworld.cc
samples/src/mandelbrot/: CMakeLists.txt  Image.cc  Image.h  Makefile  README.txt  mandelbrot.cc
samples/src/pathtracer/: BoundingVolumeHierarchy.h  BoundingVolumeHierarchy_opt.h  Box.h  CMakeLists.txt  Color.h  GlassMaterial.h  HitRecord.h  Image.h  LambertianMaterial.h  LambertianTexturedMaterial.h  Light.h  Makefile  Math.h  PhongMaterial.h  README.txt  Ray.h  Scene.h  Texture.h  Triangle.h  Vector.h  raytrace.cc
samples/src/prog1/: ColorRGB.cc  ColorRGB.h  Image.cc  Makefile  Normal.cc  Normal.h  Point3D.cc  Point3D.h  README.txt  Ray.cc  Ray.h  Sphere.cc  Sphere.h  Vector3D.cc  Vector3D.h  prog1.cc
samples/src/prog2/: ColorRGB.cc  ColorRGB.h  HitRecord.cc  HitRecord.h  Image.h  Makefile  Normal.cc  PinholeCamera.cc  PinholeCamera.h  Point3D.cc  README.txt  Ray.cc  Scene.cc  Scene.h  Sphere.h  Vector3D.cc  Vector3D.h  constants.h  prog2.cc  rt
samples/src/prog3/: Box.cc  Box.h  HitRecord.h  Image.cc  Makefile  MyMath.h  Normal.cc  Normal.h  PinholeCamera.cc  Point3D.cc  Point3D.h  PointLight.cc  PointLight.h  README.txt  Ray.h  Scene.cc  Scene.h  Sphere.cc  Tri.cc  Vector3D.cc  constants.h  prog3.cc
samples/src/prog4/: Box.cc  Box.h  ColorRGB.cc  ColorRGB.h  HitRecord.cc  HitRecord.h  Makefile  PinholeCamera.h  Point3D.cc  Point3D.h  README.txt  Scene.cc  Scene.h  Sphere.h  Tri.h  Vector3D.h  constants.h  myBVH.cc  myBVH.h  prog4.cc
samples/src/simd_mandelbrot/: CMakeLists.txt  Color.cc  Color.h  Image.h  Makefile  README.txt  mandelbrot.cc
sim/: Animation.cc  Animation.h  Assembler.cc  Assembler.h  BVH.cc  BVH.h  Bitwise.cc  Bitwise.h  BranchUnit.cc  BranchUnit.h  CMakeLists.txt  Camera.cc  Camera.h  ConversionUnit.cc  ConversionUnit.h  CustomLoadMemory.cc  CustomLoadMemory.h  DebugUnit.cc  DebugUnit.h  Debugger.cc  Debugger.h  DiskBuffer.h  DwarfReader.cc  DwarfReader.h  FPAddSub.cc  FPAddSub.h  FPCompare.cc  FPCompare.h  FPDiv.cc  FPDiv.h  FPInvSqrt.cc  FPInvSqrt.h  FPMinMax.cc  FPMinMax.h  FPMul.cc  FPMul.h  FourByte.h  FunctionalUnit.h  GlobalRegisterFile.cc  GlobalRegisterFile.h  (+76 more)
